--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Ojas for TTE</string>
+    <string name="user">Username</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign In</string>
+
+
 </resources>
