--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,14 @@
     <string name="password">Password</string>
     <string name="sign_in">Sign In</string>
 
+    <string name="comprt1">Compartment 1</string>
+    <string name="comprt2">Compartment 2</string>
+    <string name="comprt3">Compartment 3</string>
+    <string name="comprt4">Compartment 4</string>
+    <string name="comprt5">Compartment 5</string>
+    <string name="comprt6">Compartment 6</string>
+    <string name="comprt7">Compartment 7</string>
+    <string name="comprt8">Compartment 8</string>
+    <string name="comprt9">Compartment 9</string>
 
 </resources>
